--- a/public/css/global.css
+++ b/public/css/global.css
@@ -2401,6 +2401,7 @@ a:hover .app--avatar {
 .app--user--list .button-text {
   margin-right: -15px;
   color: #ccc;
+  /* float: right; */
 }
 /* line 203, ../sass/global.sass */
 .app--user--list .button-text:hover {
